# python-project-83

./: Makefile  README.md  build.sh  database.sql  gitignore  pyproject.toml
page_analyzer/: app.py  checker.py  database.py  validator.py
page_analyzer/templates/: error.html  header.html  index.html
page_analyzer/templates/urls/: all_urls.html  one.html
