[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["NevermoreKatana <grenkachannel@hotmail.com>"]
readme = "README.md"
packages = [{include = "hexlet_code"}]

[tool.poetry.dependencies]
python = "3.11"
Flask = "^2.3.3"
gunicorn = "^21.2.0"
flake8 = "^6.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

packages = [
  { include = "page_analyzer" },
]